Fixes alignment on about me section

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h3 {
 /* About me */
 
 .about {
-    padding: 20px 600px;
+    padding: 50px;
     text-align: justify; 
     line-height: 25px;
 }
